# S-c-ript

./: .gitignore  .gitmodules  CHANGES  CMakeLists.txt  LICENSE  README.md  TODO
bstring/: bstrlib.c
cim/: CMakeLists.txt  README.md  cim.c  cim.txt
doc/: compile.txt
include/: headers.h  list.h  macros.h  slist.h  socket.c  socket.h  stopwatch.c  stopwatch.h  timer.h  vasprintf.c
include/json/: config.h  json.h  json_tokener.c  jsonc.h  printbuf.c
lib/: advapi32.def  ws2_32.def
modules/json/: README.html
mongo/test/: compile_mongotsts.bat  compile_simple.bat  mongoTsts.c  simple.c  test.h
src/: libtcc.c  libtccCgi.c  tccCgi.c  tccCgi.h  tccpe.c
src/S(c)ript/: S(c)ript.c  TODO
src/S(c)ript/web_examples/: simpleMongoConn.tcc  sockets.tcc  testBson.tcc  testHtml.tcc
src/Script/: Script.c
src/Script/web_examples/: simpleDb.tcc  wsock.tcc
src/tests/: libtcc_test.c
src/win32/: build-tcc.bat
tests/: test1.tcc  test2.tcc  testhtml.tcc
