cmake_minimum_required(VERSION 3.1)
project(tcc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    bstring/bsafe.c
    bstring/bsafe.h
    bstring/bstest.c
    bstring/bstraux.c
    bstring/bstraux.h
    bstring/bstrlib.c
    bstring/bstrlib.h
    bstring/bstrlib.txt
    bstring/bstrwrap.cpp
    bstring/bstrwrap.h
    bstring/cpptest.cpp
    bstring/gpl.txt
    bstring/license.txt
    bstring/porting.txt
    bstring/security.txt
    bstring/test.cpp
    bstring/testaux.c
    bstring/tst.c
    doc/compile.txt
    doc/tcc-doc.html
    doc/tcc-win32.txt
    examples/makproj/makproj/makproj.c
    examples/dll.c
    examples/fib.c
    examples/hello_dll.c
    examples/hello_win.c
    include/json/arraylist.c
    include/json/arraylist.h
    include/json/bits.h
    include/json/config.h
    include/json/debug.c
    include/json/debug.h
    include/json/json.h
    include/json/json_inttypes.h
    include/json/json_object.c
    include/json/json_object.h
    include/json/json_object_private.h
    include/json/json_tokener.c
    include/json/json_tokener.h
    include/json/json_util.c
    include/json/json_util.h
    include/json/jsonc.h
    include/json/linkhash.c
    include/json/linkhash.h
    include/json/printbuf.c
    include/json/printbuf.h
    include/sys/fcntl.h
    include/sys/file.h
    include/sys/locking.h
    include/sys/stat.h
    include/sys/time.h
    include/sys/timeb.h
    include/sys/types.h
    include/sys/unistd.h
    include/sys/utime.h
    include/winapi/basetsd.h
    include/winapi/basetyps.h
    include/winapi/winbase.h
    include/winapi/wincon.h
    include/winapi/windef.h
    include/winapi/windows.h
    include/winapi/winerror.h
    include/winapi/wingdi.h
    include/winapi/winnetwk.h
    include/winapi/winnls.h
    include/winapi/winnt.h
    include/winapi/winreg.h
    include/winapi/winsvc.h
    include/winapi/winuser.h
    include/winapi/winver.h
    include/_mingw.h
    include/assert.h
    include/bsafe.c
    include/bsafe.h
    include/bson.c
    include/bson.h
    include/bstest.c
    include/bstraux.c
    include/bstraux.h
    include/bstrlib.c
    include/bstrlib.h
    include/bstrwrap.h
    include/conio.h
    include/ctype.h
    include/dir.h
    include/direct.h
    include/dirent.h
    include/dos.h
    include/encoding.c
    include/encoding.h
    include/env.h
    include/env_default.c
    include/env_posix.c
    include/env_posix.h
    include/errno.h
    include/excpt.h
    include/fcntl.h
    include/fenv.h
    include/float.h
    include/gridfs.c
    include/gridfs.h
    include/headers.h
    include/inttypes.h
    include/io.h
    include/kvec.h
    include/limits.h
    include/list.h
    include/locale.h
    include/malloc.h
    include/math.h
    include/md5.c
    include/md5.h
    include/mem.h
    include/memory.h
    include/mongo.c
    include/mongo.h
    include/mswsock.h
    include/numbers.c
    include/platform.h
    include/process.h
    include/setjmp.h
    include/sglib.h
    include/share.h
    include/signal.h
    include/slist.h
    include/socket.c
    include/socket.h
    include/stdarg.h
    include/stdbool.h
    include/stddef.h
    include/stdint.h
    include/stdio.h
    include/stdlib.h
    include/stopwatch.c
    include/stopwatch.h
    include/string.h
    include/tchar.h
    include/testaux.c
    include/time.h
    include/timer.h
    include/unistd.h
    include/values.h
    include/varargs.h
    include/vasprintf.c
    include/wchar.h
    include/wctype.h
    include/winsock.h
    include/winsock2.h
    json/arraylist.c
    json/arraylist.h
    json/AUTHORS
    json/autogen.sh
    json/bits.h
    json/ChangeLog
    json/config.h.in
    json/config.h.win32
    json/configure.in
    json/COPYING
    json/debug.c
    json/debug.h
    json/Doxyfile
    json/INSTALL
    json/json-c.vcproj
    json/json.h
    json/json.pc.in
    json/json_inttypes.h
    json/json_object.c
    json/json_object.h
    json/json_object_private.h
    json/json_tokener.c
    json/json_tokener.h
    json/json_util.c
    json/json_util.h
    json/linkhash.c
    json/linkhash.h
    json/Makefile.am
    json/NEWS
    json/parse_int64.test
    json/printbuf.c
    json/printbuf.h
    json/README
    json/README-WIN32.html
    json/README.html
    json/test-defs.sh
    json/test1.c
    json/test1.expected
    json/test1.test
    json/test2.c
    json/test2.expected
    json/test2.test
    json/test4.c
    json/test4.expected
    json/test4.test
    json/test_cast.c
    json/test_cast.expected
    json/test_cast.test
    json/test_null.c
    json/test_null.expected
    json/test_null.test
    json/test_parse_int64.c
    json/test_parse_int64.expected
    lib/advapi32.def
    lib/bstrlib.o
    lib/gdi32.def
    lib/kernel32.def
    lib/libtcc1.a
    lib/msvcrt.def
    lib/user32.def
    lib/ws2_32.def
    lib/wsock32.def
    mongo/docs/buildscripts/__init__.py
    mongo/docs/buildscripts/docs.py
    mongo/docs/source/sphinx/source/bson.rst
    mongo/docs/source/sphinx/source/building.rst
    mongo/docs/source/sphinx/source/conf.py
    mongo/docs/source/sphinx/source/connections.rst
    mongo/docs/source/sphinx/source/index.rst
    mongo/docs/source/sphinx/source/tutorial.rst
    mongo/docs/source/sphinx/make.bat
    mongo/docs/source/sphinx/Makefile
    mongo/src/bson.c
    mongo/src/bson.h
    mongo/src/encoding.c
    mongo/src/encoding.h
    mongo/src/env.h
    mongo/src/env_default.c
    mongo/src/env_posix.c
    mongo/src/env_posix.h
    mongo/src/gridfs.c
    mongo/src/gridfs.h
    mongo/src/md5.c
    mongo/src/md5.h
    mongo/src/mongo.c
    mongo/src/mongo.h
    mongo/src/numbers.c
    mongo/src/platform.h
    mongo/test/platform/linux/timeouts.c
    mongo/test/auth.c
    mongo/test/benchmark.c
    mongo/test/bson.c
    mongo/test/bson_subobject.c
    mongo/test/compile_mongotsts.bat
    mongo/test/compile_simple.bat
    mongo/test/count_delete.c
    mongo/test/cpptest.cpp
    mongo/test/cursors.c
    mongo/test/endian_swap.c
    mongo/test/errors.c
    mongo/test/examples.c
    mongo/test/functions.c
    mongo/test/gridfs.c
    mongo/test/helpers.c
    mongo/test/json.c
    mongo/test/mongoTsts.c
    mongo/test/oid.c
    mongo/test/replica_set.c
    mongo/test/resize.c
    mongo/test/simple.c
    mongo/test/sizes.c
    mongo/test/test.h
    mongo/test/update.c
    mongo/test/validate.c
    mongo/.astylerc
    mongo/.gitignore
    mongo/APACHE-2.0.txt
    mongo/check_int64.sh
    mongo/doxygenConfig
    mongo/HISTORY.md
    mongo/Makefile
    mongo/README.md
    mongo/SConstruct
    sglib/doc/GenerateDoc
    sglib/doc/index.html
    sglib/doc/index.html.sss
    sglib/doc/sssi
    sglib/samples/arraybinsearch.c
    sglib/samples/arraysort.c
    sglib/samples/arraysort1.c
    sglib/samples/dllist.c
    sglib/samples/hash.c
    sglib/samples/listinsertsort.c
    sglib/samples/listinsertsort1.c
    sglib/samples/listsort.c
    sglib/samples/queue.c
    sglib/samples/queue2.c
    sglib/samples/rbtree.c
    sglib/samples/selftest.c
    sglib/samples/test.c
    sglib/README
    sglib/sglib.h
    src/doc/Changelog
    src/doc/COPYING
    src/doc/README
    src/doc/tcc-doc.html
    src/doc/tcc-doc.texi
    src/doc/TODO
    src/examples/ex1.c
    src/examples/ex2.c
    src/examples/ex3.c
    src/examples/ex4.c
    src/examples/ex5.c
    src/include/float.h
    src/include/stdarg.h
    src/include/stdbool.h
    src/include/stddef.h
    src/include/tcclib.h
    src/include/varargs.h
    src/lib/alloca86-bt.S
    src/lib/alloca86.S
    src/lib/bcheck.c
    src/lib/libtcc1.c
    "src/S(c)ript/web_examples/simpleDb.tcc"
    "src/S(c)ript/web_examples/simpleJson.tcc"
    "src/S(c)ript/web_examples/simpleMongoConn.tcc"
    "src/S(c)ript/web_examples/sockets.tcc"
    "src/S(c)ript/web_examples/test1.tcc"
    "src/S(c)ript/web_examples/test2.tcc"
    "src/S(c)ript/web_examples/testBson.tcc"
    "src/S(c)ript/web_examples/testHtml.tcc"
    "src/S(c)ript/web_examples/wsock.tcc"
    "src/S(c)ript/S(c)ript.c"
    "src/S(c)ript/TODO"
    src/tests/asmtest.S
    src/tests/boundtest.c
    src/tests/gcctestsuite.sh
    src/tests/libtcc_test.c
    src/tests/Makefile
    src/tests/tcctest.c
    src/win32/examples/dll.c
    src/win32/examples/fib.c
    src/win32/examples/hello_dll.c
    src/win32/examples/hello_win.c
    src/win32/include/sys/fcntl.h
    src/win32/include/sys/file.h
    src/win32/include/sys/locking.h
    src/win32/include/sys/stat.h
    src/win32/include/sys/time.h
    src/win32/include/sys/timeb.h
    src/win32/include/sys/types.h
    src/win32/include/sys/unistd.h
    src/win32/include/sys/utime.h
    src/win32/include/winapi/basetsd.h
    src/win32/include/winapi/basetyps.h
    src/win32/include/winapi/winbase.h
    src/win32/include/winapi/wincon.h
    src/win32/include/winapi/windef.h
    src/win32/include/winapi/windows.h
    src/win32/include/winapi/winerror.h
    src/win32/include/winapi/wingdi.h
    src/win32/include/winapi/winnetwk.h
    src/win32/include/winapi/winnls.h
    src/win32/include/winapi/winnt.h
    src/win32/include/winapi/winreg.h
    src/win32/include/winapi/winsvc.h
    src/win32/include/winapi/winuser.h
    src/win32/include/winapi/winver.h
    src/win32/include/_mingw.h
    src/win32/include/assert.h
    src/win32/include/conio.h
    src/win32/include/ctype.h
    src/win32/include/dir.h
    src/win32/include/direct.h
    src/win32/include/dirent.h
    src/win32/include/dos.h
    src/win32/include/errno.h
    src/win32/include/excpt.h
    src/win32/include/fcntl.h
    src/win32/include/fenv.h
    src/win32/include/float.h
    src/win32/include/inttypes.h
    src/win32/include/io.h
    src/win32/include/limits.h
    src/win32/include/locale.h
    src/win32/include/malloc.h
    src/win32/include/math.h
    src/win32/include/mem.h
    src/win32/include/memory.h
    src/win32/include/process.h
    src/win32/include/setjmp.h
    src/win32/include/share.h
    src/win32/include/signal.h
    src/win32/include/stdarg.h
    src/win32/include/stdbool.h
    src/win32/include/stddef.h
    src/win32/include/stdint.h
    src/win32/include/stdio.h
    src/win32/include/stdlib.h
    src/win32/include/string.h
    src/win32/include/tchar.h
    src/win32/include/time.h
    src/win32/include/unistd.h
    src/win32/include/values.h
    src/win32/include/varargs.h
    src/win32/include/wchar.h
    src/win32/include/wctype.h
    src/win32/lib/chkstk.S
    src/win32/lib/crt1.c
    src/win32/lib/dllcrt1.c
    src/win32/lib/dllmain.c
    src/win32/lib/gdi32.def
    src/win32/lib/kernel32.def
    src/win32/lib/msvcrt.def
    src/win32/lib/user32.def
    src/win32/lib/wincrt1.c
    src/win32/libtcc/libtcc.h
    src/win32/tools/tiny_impdef.c
    src/win32/tools/tiny_libmaker.c
    src/win32/build-tcc.bat
    src/win32/tcc-win32.txt
    src/arm-gen.c
    src/c67-gen.c
    src/coff.h
    src/config.h
    src/configure
    src/elf.h
    src/i386-asm.c
    src/i386-asm.h
    src/i386-gen.c
    src/il-gen.c
    src/il-opcodes.h
    src/libtcc.c
    src/libtcc.h
    src/libtccCgi.c
    src/libtccCgi.h
    src/Makefile
    src/stab.def
    src/stab.h
    src/tcc.c
    src/tcc.h
    src/tccasm.c
    src/tccCgi.c
    src/tccCgi.h
    src/tcccoff.c
    src/tccelf.c
    src/tccgen.c
    src/tccpe.c
    src/tccpp.c
    src/tcctok.h
    src/texi2pod.pl
    src/VERSION
    src/x86_64-gen.c
    tests/test1.tcc
    tests/test2.tcc
    tests/testbson.tcc
    tests/testhtml.tcc
    LICENSE
    README.md)

include_directories(bstring)

add_executable(tcc ${SOURCE_FILES})